# localfs

./: .dockerignore  .gitattributes  .gitignore  .readthedocs.yaml  AGENTS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  build.ps1  build.sh  config.py  docker-compose.yml  installer.ps1  installer.sh  main.py  pyproject.toml  theme.py
docs/: api.md  architecture.md  configuration.md  deployment.md  development.md  index.md  requirements.txt  roadmap.md  setup.md  troubleshooting.md  usage.md
src/localfs/: config.py  main.py  theme.py
src/localfs/static/css/: theme.css
src/localfs/templates/: base.html  index.html  login.html  player.html  preview.html  trash.html
static/css/: theme.css
static/js/: main.js
templates/: base.html  error.html  index.html  login.html  player.html  settings.html
tests/: conftest.py  test_config.py  test_main.py  test_theme.py
webplay/: pyproject.toml
webplay/webplay/: cli.py
