[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "localfs"
version = "0.2.0"
description = "A simple, fast, and beautiful local file sharing service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.scripts]
localfs = "localfs.main:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
